--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
 
-    <script src="bundle.js"></script>
+    <script src="public/bundle.js"></script>
   </body>
 </html>
